tf/rt.tf
resource "aws_route_table" "rt_1" {
  vpc_id = aws_vpc.vpc1.id
  route {
    cidr_block = var.cidr_ipv4
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "rt_1"
  }
}

resource "aws_route_table" "rt_2" {
  vpc_id = aws_vpc.vpc1.id
  route {
    cidr_block = var.cidr_ipv4
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "rt_2"
  }
}
